--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,13 @@
             <div class="card card-body">
               <form>
                 <div class="mb-3">
-                  <label for="" class="form-label">Name</label>
+                  <label  class="form-label">Name</label>
                   <input type="text" class="form-control" id="name" name="name">
                 </div>
 
 
-                <div class="mb-3">
-                  <label for="" class="form-label email">Email address</label>
+                <div class="mb-3">+
+                  <label  class="form-label email">Email address</label>
                   <input type="text" class="form-control" id="email">
                   <div class="form-text">Get Suggestions.</div>
                 </div>
