--- a/src/reminders.html
+++ b/src/reminders.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <script type= "text" src="../src/js/main.js"></script>
 </head>
 <body>
     <div id="container">
@@ -29,6 +30,5 @@
       </div>
       <div id="content"></div>
     </div>
-        <script src="../src/js/main.js"></script>
 </body>
 </html>
