--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body class="container-fluid">
     <div class="header-gradient">
       <h1>Little Reminders <i class="bi bi-alarm"></i></h1>
+      <a href="src/reminders.html">link to the List</a>
       <p>
         <a class="btn btn-outline-warning" data-bs-toggle="collapse" href="#collapse-submitForm" 
         role="button" aria-expanded="false" aria-controls="collapse-submitForm">I want to add Mine</a>
@@ -27,7 +28,7 @@
                 </div>
 
 
-                <div class="mb-3">+
+                <div class="mb-3">
                   <label  class="form-label email">Email address</label>
                   <input type="text" class="form-control" id="email">
                   <div class="form-text">Get Suggestions.</div>
