modified reminders page

--- a/src/reminders.html
+++ b/src/reminders.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script type= "module" src="../src/js/main.js"></script>
+    <script type= "module" src="../src/js/reminders.js"></script>
+    <link rel="stylesheet" href="scss/styles.scss">
 </head>
 <body>
-    <div id="container">
+    <div id="container" class="header-gradient">
     <div class="row">
         <div class="col">
           <div class="">
