--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="container-fluid">
     <div class="header-gradient">
       <h1>Little Reminders <i class="bi bi-alarm"></i></h1>
-      <a href="src/reminders.html">link to the List</a>
+      <!-- <a href="src/reminders.html">link to the List</a> -->
       <p>
         <a class="btn btn-outline-warning" data-bs-toggle="collapse" href="#collapse-submitForm" 
         role="button" aria-expanded="false" aria-controls="collapse-submitForm">I want to add Mine</a>
