--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
       </div>
       <div style = "display: none;" class="alert alert-success alert-dismissible fade show" id ="myAlert" role="alert">
-        <strong>Yay, your details has been saved!!!</strong>
-        Now you can easily access your little reminders
+        <strong>Yay, check your email now!!!</strong>
+       Then follow the link
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
 
